# last-watched

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  sidecar.rs  winapi.rs
common/: Cargo.toml
common/src/: lib.rs  sidecar.rs  winapi.rs
plugins/: README.md  last-watched.lua
scripts/: README.md  last-watched.lua
shell_extention/: Cargo.toml
shell_extention/src/: lib.rs  misc.rs  overlay_provider.rs  registry.rs
shell_extention/src/providers/: context_menu.rs  icon_overlay.rs  mod.rs  property_store.rs
src/: lib.rs  misc.rs  overlay_provider.rs  provider_factory.rs  registry.rs
