[package]
name = "last-watched"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
] }
windows-core = "0.58.0"
