[workspace]
members = ["shell_extention"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
guid = "0.1.0"
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
windows-core = "0.58.0"
winreg = "0.52.0"
